--- a/giraph-gora/pom.xml
+++ b/giraph-gora/pom.xml
@@ -29,7 +29,7 @@ under the License.
   <artifactId>giraph-gora</artifactId>
   <packaging>jar</packaging>
 
-  <name>Apache Giraph Gora I/O</name>
+  <name>GiraphGora</name>
   <url>http://gora.apache.org/giraph-gora/</url>
   <description>Giraph Gora input/output classes</description>
 
@@ -162,14 +162,22 @@ under the License.
     <dependency>
       <groupId>org.apache.gora</groupId>
       <artifactId>gora-core</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.gora</groupId>
       <artifactId>gora-cassandra</artifactId>
       <version>0.3</version>
-      <scope>provided</scope>
     </dependency>
+    <dependency>
+	    <groupId>xerces</groupId>
+    	<artifactId>xercesImpl</artifactId>
+    	<version>2.9.1</version>
+	</dependency>
+	<dependency>
+    	<groupId>xalan</groupId>
+	    <artifactId>xalan</artifactId>
+    	<version>2.7.1</version>
+	</dependency>
 
     <!-- test dependencies. sorted lexicographically. -->
     <dependency>
