--- a/giraph-gora/pom.xml
+++ b/giraph-gora/pom.xml
@@ -82,62 +82,6 @@ under the License.
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>hadoop_0.20.203</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-test</artifactId>
-          <version>${hadoop.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.giraph</groupId>
-          <artifactId>giraph-core</artifactId>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>hadoop_1.0</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-test</artifactId>
-          <version>${hadoop.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>hadoop_non_secure</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-test</artifactId>
-          <version>${hadoop.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>hadoop_facebook</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.facebook.hadoop</groupId>
-          <artifactId>hadoop-test</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
-
   <dependencies>
     <!-- compile dependencies. sorted lexicographically. -->
     <dependency>
@@ -169,6 +113,16 @@ under the License.
       <version>0.3</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.gora</groupId>
+      <artifactId>gora-hbase</artifactId>
+      <version>0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase</artifactId>
+      <version>0.90.4</version>
+    </dependency>
+    <dependency>
 	    <groupId>xerces</groupId>
     	<artifactId>xercesImpl</artifactId>
     	<version>2.9.1</version>
@@ -183,12 +137,6 @@ under the License.
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase</artifactId>
-      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
   </dependencies>
