Still adding features

--- a/giraph-gora/conf/gora.properties
+++ b/giraph-gora/conf/gora.properties
@@ -13,17 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-gora.datastore.default=org.apache.gora.cassandra.CassandraStore
-gora.cassandrastore.keyspace=Killrvideo
-gora.cassandrastore.name=
-gora.cassandrastore.class=
-gora.cassandrastore.qualifier=
-gora.cassandrastore.family=
-gora.cassandrastore.type=
-gora.cassandraStore.cluster=Test Cluster
-gora.cassandraStore.host=localhost
-gora.cassandrastore.client.type=astyanax
+# FOR HBASE DATASTORE
+gora.datastore.default=org.apache.gora.hbase.store.HBaseStore
 
+# FOR CASSANDRA DATASTORE
+#gora.datastore.default=org.apache.gora.cassandra.CassandraStore
+
+# FOR DYNAMO DATASTORE
 #gora.datastore.default=org.apache.gora.dynamodb.store.DynamoDBStore
 #gora.datastore.autocreateschema=true
 
