--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@ under the License.
 
     <dep.accumulo.version>1.4.0</dep.accumulo.version>
     <dep.gora.version>0.3</dep.gora.version>
+    <dep.airline.version>0.5</dep.airline.version>
     <dep.base64.version>2.3.8</dep.base64.version>
     <dep.cli-parser.version>1.1</dep.cli-parser.version>
     <dep.codehaus-jackson.version>1.8.0</dep.codehaus-jackson.version>
@@ -272,7 +273,7 @@ under the License.
     <dep.guava.version>12.0</dep.guava.version>
     <dep.hcatalog.version>0.5.0-incubating</dep.hcatalog.version>
     <dep.hive.version>0.11.0</dep.hive.version>
-    <dep.hiveio.version>0.14</dep.hiveio.version>
+    <dep.hiveio.version>0.16</dep.hiveio.version>
     <dep.json.version>20090211</dep.json.version>
     <dep.junit.version>4.8</dep.junit.version>
     <dep.jython.version>2.5.3</dep.jython.version>
@@ -619,6 +620,7 @@ under the License.
         <module>giraph-hcatalog</module>
         <module>giraph-hive</module>
         <module>giraph-gora</module>
+        <module>giraph-rexster</module>
       </modules>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -649,6 +651,7 @@ under the License.
         <module>giraph-hbase</module>
         <module>giraph-hcatalog</module>
         <module>giraph-hive</module>
+        <module>giraph-rexster</module>
       </modules>
       <properties>
         <hadoop.version>1.0.2</hadoop.version>
@@ -1052,6 +1055,11 @@ under the License.
         <groupId>com.facebook.thirdparty.yourkit-api</groupId>
         <artifactId>yjp-controller-api-redist</artifactId>
         <version>${dep.yourkit-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.airlift</groupId>
+        <artifactId>airline</artifactId>
+        <version>${dep.airline.version}</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
