--- a/giraph-gora/pom.xml
+++ b/giraph-gora/pom.xml
@@ -29,7 +29,7 @@ under the License.
   <artifactId>giraph-gora</artifactId>
   <packaging>jar</packaging>
 
-  <name>GiraphGora</name>
+  <name>Apache Giraph Gora I/O</name>
   <url>http://gora.apache.org/giraph-gora/</url>
   <description>Giraph Gora input/output classes</description>
 
@@ -105,6 +105,11 @@ under the License.
     <dependency>
       <groupId>org.apache.gora</groupId>
       <artifactId>gora-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.gora</groupId>
+      <artifactId>gora-hbase</artifactId>
+      <version>0.3</version>
     </dependency>
     <dependency>
       <groupId>xerces</groupId>
