--- a/giraph-gora/pom.xml
+++ b/giraph-gora/pom.xml
@@ -106,6 +106,11 @@ under the License.
       <artifactId>gora-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.gora</groupId>
+      <artifactId>gora-hbase</artifactId>
+      <version>0.3</version>
+    </dependency>
+    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <version>2.9.1</version>
